// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Queries.HackerNewsAPI] fetches an array of all the articles from the HackerNews API 1`] = `
Object {
  "data": Object {
    "allArticles": Array [
      Object {
        "author": null,
        "id": "hn-undefined",
        "source": "HackerNews",
        "time": null,
        "title": null,
        "url": null,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`[Queries.HackerNewsAPI] fetches an array of articles from the HackerNews API 1`] = `
Object {
  "data": Object {
    "articlesBySource": Array [
      Object {
        "author": "EndXA",
        "id": "hn-21168365",
        "source": "HackerNews",
        "time": "1570314103",
        "title": "The stockmarket is now run by computers, algorithms and passive managers",
        "url": "https://www.economist.com/briefing/2019/10/05/the-stockmarket-is-now-run-by-computers-algorithms-and-passive-managers",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`[Queries.HackerNewsAPI] fetches an article from the HackerNews API 1`] = `
Object {
  "data": Object {
    "articleBySource": Object {
      "author": "EndXA",
      "id": "hn-21168365",
      "source": "HackerNews",
      "time": "1570314103",
      "title": "The stockmarket is now run by computers, algorithms and passive managers",
      "url": "https://www.economist.com/briefing/2019/10/05/the-stockmarket-is-now-run-by-computers-algorithms-and-passive-managers",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
